--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
+body {
+  font-family: "Arial", sans-serif;
+  background-image: url("bg.jpg");
+  background-size: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .App {
   text-align: center;
+  max-width: 600px;
+  width: 100%;
+  padding: 20px;
+  background-color: rgb(236, 246, 250);
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(230, 210, 146, 0.1);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size: 2.5rem;
+  color: #333;
+  margin-bottom: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+input {
+  padding: 10px;
+  font-size: 1rem;
+  border: 2px solid #ddd;
+  border-radius: 5px;
+  width: calc(100% - 22px);
+  margin-bottom: 10px;
+  box-sizing: border-box;
+}
+
+button {
+  padding: 10px 20px;
+  font-size: 1rem;
+  color: #fff;
+  background-color: rgb(14, 117, 109);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #052529;
+}
+
+.error {
+  color: #d9534f;
+  margin-top: 10px;
+}
+
+.weather_cast {
+  margin-top: 20px;
+  padding: 20px;
+  background: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.weather_cast h2 {
+  font-size: 2rem;
+  margin: 0;
+  color: #333;
+}
+
+.weather_cast p {
+  font-size: 1.2rem;
+  margin: 10px 0;
+  color: #555;
+}
+
+@media (max-width: 600px) {
+  .App {
+    padding: 15px;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  input {
+    width: calc(100% - 20px);
   }
-  to {
-    transform: rotate(360deg);
+
+  button {
+    width: 100%;
+    box-sizing: border-box;
   }
 }
